--- a/index.html
+++ b/index.html
@@ -158,6 +158,62 @@ building robust data driven systems using statistical and machine learning techn
               </p>
             </td>
           </tr>
+
+
+          <tr bgcolor="#ffffd0">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+
+                <img src='images/ocr1.png' width="180" height="180">
+              </div>
+
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="http://nerf.live">
+              <papertitle><a href="https://link.springer.com/chapter/10.1007/978-981-15-3607-6_41">End-to-End Optical Character Recognition Using Sythetic Dataset Generator for Noisy Conditions</a></papertitle>
+              </a>
+              <br>
+              <a href="https://www.researchgate.net/profile/Md-Shopon">Md Shopon</a>,
+              <strong>Nazmul Alam Diptu</strong>,
+              <a href="https://www.linkedin.com/in/nabeelmohammed/">Nabeel Mohammed</a>
+              <br>
+              <em>Proceedings of International Joint Conference on Computational Intelligence pp 515-527</em>, July 2019
+              <br>
+              <p>Optical Character Recognition is one of the most prevailing research fields since 1970s. Numerous research work has been conducted on Optical Character Recognition. The problem of Optical Character Recognition is to convert images of texts into editable texts. Recent advances in deep learning have accelerated the improvements in this field, particularly with languages with large annotated datasets. Bangla, a language with a large number of character classes and complex cursive alphabet shapes, is unfortunately not included in these advancements due to the lack of a large annotated dataset. This work concentrates on attempting to perform OCR in noisy conditions for Bangla text. We have created a dataset of 5000 noisy Bangla text samples. To augment this small collection, we use a strategy to pre-train our proposed end-to-end model on synthetically generated data and then optionally fine-tune on a part of the collected dataset. Our results indicate that attempting to perform noisy OCR is an extremely challenging task, and the best results are obtained when models trained on synthetic data are fine-tuned with some real-world data.</p>
+            </td>
+
+
+            <tr bgcolor="#ffffd0">
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+
+                  <img src='images/abusive.png' width="180" height="180">
+                </div>
+
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="http://nerf.live">
+                <papertitle>Comparative Analysis of Bangla Online Abusive Comment
+Classification</papertitle>
+                </a>
+                <br>
+                <a href="https://scholar.google.com/citations?hl=en&user=h52EUGcAAAAJ">Aimon Rahman</a>,
+                <strong>Nazmul Alam Diptu</strong>,
+                <a href="https://www.linkedin.com/in/nabeelmohammed/">Nabeel Mohammed</a>,
+                <a href="http://ece.northsouth.edu/people/dr-sifat-momen/">Dr. Sifat Momen</a>
+                <br>
+                <em>Under Review : </em> Transactions on Asian and Low-Resource Language Information
+Processing
+                <br>
+                <p>As internet access rises, harassment through social media has become an
+inseparable and unwanted by-product of the Information Age. In spite of the
+fact that there are numerous existing methods for flagging and reporting
+abusive comments in English, there is no such existing equivalent system for
+Bangla language. In this study, we introduce a framework to detect abusive
+comments and its subclasses from social media comments. A data set of Bangla
+user-generated offensive comments, “Oshishto”, has been created for the
+purpose of this study, which itself is the first of its kind.</p>
+              </td>
 <!--
           <tr onmouseout="ibrnet_stop()" onmouseover="ibrnet_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
