teaching section added

--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@ building robust data driven systems using statistical and machine learning techn
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
 
-                  <img src='images/abusive.png' width="180" height="180">
+                  <img src='images/abusive.PNG' width="180" height="180">
                 </div>
 
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="http://nerf.live">
+
                 <papertitle>Comparative Analysis of Bangla Online Abusive Comment
 Classification</papertitle>
                 </a>
@@ -2331,51 +2331,54 @@ purpose of this study, which itself is the first of its kind.</p>
           </tr>
 
         </tbody></table>
-
+      -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
-              <heading>Service</heading>
+              <heading>Teaching</heading>
             </td>
           </tr>
         </tbody></table>
-        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/cvf.jpg"></td>
-            <td width="75%" valign="center">
-              <a href="http://cvpr2021.thecvf.com/area-chairs">Area Chair, CVPR 2021</a>
-              <br><br>
-              <a href="http://cvpr2019.thecvf.com/area_chairs">Area Chair, CVPR 2019</a>
-              <br><br>
-              <a href="http://cvpr2018.thecvf.com/organizers/area_chairs">Area Chair, CVPR 2018</a>
-            </td>
-          </tr>
+
+        <table width="100%" align="center" border="0" cellpadding="20">
+          <tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/cs188.jpg" alt="cs188">
+              <img src="images/programming.jpg" alt="programming" width="180">
             </td>
             <td width="75%" valign="center">
-              <a href="http://inst.eecs.berkeley.edu/~cs188/sp11/announcements.html">Graduate Student Instructor, CS188 Spring 2011</a>
+              <a href="https://github.com/diptu/Teaching/tree/main/CSE%20115L%20Programming%20Language%20I%20Lab">Lab Instructor, C Programming [Spring'21,Summer'20,Spring'20,Fall'19]</a>
               <br>
               <br>
-              <a href="http://inst.eecs.berkeley.edu/~cs188/fa10/announcements.html">Graduate Student Instructor, CS188 Fall 2010</a>
+              <a href="https://github.com/diptu/Teaching/tree/main/CSE311L%20Database%20Systems">Lab Instructor, Database Systems [Spring'21,Fall'20, Summer'20, Spring'20, Fall'19]</a>
               <br>
               <br>
-              <a href="http://aima.cs.berkeley.edu/">Figures, "Artificial Intelligence: A Modern Approach", 3rd Edition</a>
+              <a href="https://github.com/diptu/Teaching/tree/main/CSE%20225L%20Data%20Structures%20and%20Algorithms">Lab Instructor, Data Structures and Algorithms  [Summer'19]
+              <br>
+              <br>
+              <a href="#">Lab Instructor, Internet and Web Technology [Summer'19,Fall'19]</a>
+              <br>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/nsu_logo.png" width="180"></td>
+            <td width="75%" valign="center">
+              Under Grade Teaching Assistant, Microprocessor Interfacing & Embedded System, [Spring' 19]
             </td>
           </tr>
         </tbody></table>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
-              <p>Template taken from <a href="https://github.com/jonbarron/website">here</a>.</p>
+              <p align="center">Template taken from <a href="https://github.com/jonbarron/website">here</a>.</p>
             </td>
           </tr>
         </tbody></table>
       </td>
     </tr>
   </table>
-  -->
+
 </body>
 
 </html>
